syntax = "proto3";

package workflow;

option go_package = "github.com/jupyter-naas/naas-models/go/workflow";

import "validate.proto";

/**
*   Argo workflow custom resources
*/

message Archive {
    map<string, string> none = 1;
}

message ArtifactS3 {
    optional string key = 1;
    optional string bucket = 2;
}

message Artifact {
    optional string name = 1;
    optional string path = 2;
    optional int32 mode = 3;
    optional string from = 4;
    optional Archive archive = 5;
    optional ArtifactS3 s3 = 6;
}

message Inputs {
    repeated Parameter parameters = 1;
    repeated Artifact artifacts = 2;
}

message Outputs {
    repeated Parameter parameters = 1;
    repeated Artifact artifacts = 2;
}

message Parameter {
    optional string name = 1;
    optional string value = 2;
    optional string default = 3;
}

message Arguments {
    map<string, string> parameters = 1;
    map<string, string> artifacts = 2;
}

message DagTasks {
    string name = 1;
    string template = 2;
    optional string depends = 3;
    optional Arguments arguments = 4;
}

message DagTemplate {
    repeated DagTasks tasks = 1;
    optional string target = 2;
}

message ScriptTemplate {
    optional string image = 1;
    repeated string command = 2;
    map<string, string> resources = 3;
    optional string source = 4;
}

message ContainerTemplate {
    string name = 1;
    string image = 2;
    map<string, string> command = 3;
    map<string, string> args = 4;
}

message Template {
    string name = 1;
    optional Inputs inputs = 2;
    optional Outputs outputs = 3;    
    optional DagTemplate dag = 4;
    optional ScriptTemplate script = 5;
    optional string ttlStrategy = 6;
    optional string container = 7;    
    optional string podGC = 8;
    map<string, string> metadata = 9;
}

message Spec {
    optional Arguments arguments  = 1;    
    string entrypoint = 2;
    repeated Template templates = 3;
}

message Metadata {
    optional string name = 1;
    optional string generateName = 2;
    optional string namespace = 3;
    map<string, string> labels = 4;
}

message Workflow {
    Metadata metadata = 1;
    Spec spec = 2;
}

message CronSpec {
    string schedule = 1;
    string timezone = 2;
    optional string startingDeadlineSeconds = 3;
    optional string concurrencyPolicy = 4;
    optional string successfulJobsHistoryLimit = 5;
    optional string failedJobsHistoryLimit = 6;
    optional string suspend = 7;
    Spec workflowSpec = 8;
}

message CronWorkflow {
    Metadata metadata = 1;
    CronSpec spec = 2;
}

/**
*   Argo workflow CRUD resources
*/

message WorkflowCreation {
    optional string name = 1;
    optional string description = 2;
    optional string user_uid = 3 [(validate.rules).string.uuid = true];
    optional string namespace = 4;
    optional bool serverDryRun = 5;
    optional Workflow workflow = 6;
}

message WorkflowCreationRequest {
    optional string workspace_id = 1 [(validate.rules).string.uuid = true];
    optional WorkflowCreation workflow_creation_request = 2;
}

message WorkflowCreationResponse {
    optional string name = 1;
    optional string message = 2;
}

message WorkflowUpdateRequest {
    optional string name = 1;
    optional string namespace = 2;
    optional Workflow workflow = 3;
}

message WorkflowUpdateResponse {
    optional string name = 1;
    optional string message = 2;
}

message WorkflowDeleteRequest {
    optional string workflow_name = 1;
    optional string namespace = 2;
}

message WorkflowDeleteResponse {
    optional string name = 1;
    optional string message = 2;
}

message WorkflowGetRequest {
    optional string workflow_name = 1;
    optional string namespace = 2;
}

message WorkflowGetResponse {
    optional string name = 1;
    optional string message = 2;
}

message WorkflowListRequest {
    optional string namespace = 1;
}

message WorkflowListResponse {
    repeated WorkflowGetResponse workflows = 1;
}

/**
*   Errors
*/

message WorkflowCreationError {
    optional string name = 1;
    optional string message = 2;
}

message WorkflowUpdateError {
    optional string name = 1;
    optional string message = 2;
}

message WorkflowDeleteError {
    optional string name = 1;
    optional string message = 2;
}

message WorkflowGetError {
    optional string name = 1;
    optional string message = 2;
}

message WorkflowListError {
    optional string name = 1;
    optional string message = 2;
}
